# seven_chat_agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  KNOWLEDGE_BASE_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_FLOW_EXECUTOR.md  check_upload.py  dev-notes.ipynb  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  test_chat.py  test_integration.py  test_startup.py
apps/honeycomb-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/honeycomb-desktop/src-tauri/capabilities/: default.json
apps/honeycomb-desktop/src-tauri/icons/: [email protected]
apps/honeycomb-desktop/src-tauri/src/: lib.rs  main.rs
apps/seven-chat-agent-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/seven-chat-agent-desktop/src-tauri/src/: lib.rs  main.rs
crates/honeycomb-cli/: Cargo.toml
crates/honeycomb-cli-claude/: Cargo.toml
crates/honeycomb-cli-claude/src/: lib.rs
crates/honeycomb-cli-codex/: Cargo.toml
crates/honeycomb-cli-codex/src/: lib.rs
crates/honeycomb-cli-cursor/: Cargo.toml
crates/honeycomb-cli-cursor/src/: lib.rs
crates/honeycomb-cli-relay/: Cargo.toml
crates/honeycomb-cli-relay/src/: executor.rs  main.rs
crates/honeycomb-cli-worker-bee/: Cargo.toml
crates/honeycomb-cli-worker-bee/src/: lib.rs
crates/honeycomb-cli/src/: lib.rs  registry.rs  resolve.rs
crates/honeycomb-core/: Cargo.toml
crates/honeycomb-core/src/: assistant_accumulation.rs  assistant_intent.rs  cli_auth.rs  cli_relay.rs  cli_workspace.rs  config.rs  dispatcher.rs  domain.rs  error.rs  friend_cli.rs  group_validate.rs  judge.rs  lib.rs  scheduler.rs
crates/honeycomb-core/src/agent/: api.rs  human.rs  mod.rs  pty.rs  registry.rs
crates/honeycomb-core/src/dispatcher/: assistant_autonomy.rs  assistant_delegate.rs  im_writeback.rs  task_flow.rs
crates/honeycomb-core/src/judge/: bridge.rs  mod.rs  service.rs
crates/honeycomb-core/src/provider/: mod.rs  ollama.rs  openai_compat.rs  rate_limit.rs  registry.rs  types.rs
crates/honeycomb-core/src/runtime/: agent.rs  config.rs  engine.rs  memory.rs  mod.rs  provider_env.rs
crates/honeycomb-core/src/store/: friend.rs  group.rs  memory.rs  message.rs  mod.rs  skill.rs  vault.rs
crates/honeycomb-judge/: Cargo.toml
crates/honeycomb-judge/src/: context.rs  election.rs  engine.rs  heuristic.rs  lib.rs  member_override.rs  parse.rs  resolve.rs  types.rs
crates/honeycomb-server/: Cargo.toml
crates/honeycomb-server/src/: cli_relay_ws.rs  lib.rs  main.rs  state.rs  static_assets.rs  ws.rs  ws_api.rs
crates/honeycomb-server/src/routes/: errors.rs  mod.rs
crates/honeycomb-tui/: Cargo.toml
crates/honeycomb-tui/src/: api.rs  app.rs  main.rs
crates/seven-chat-agent-cli/: Cargo.toml
crates/seven-chat-agent-cli-claude/: Cargo.toml
crates/seven-chat-agent-cli-claude/src/: lib.rs
crates/seven-chat-agent-cli-codex/: Cargo.toml
crates/seven-chat-agent-cli-codex/src/: lib.rs
crates/seven-chat-agent-cli-cursor/: Cargo.toml
crates/seven-chat-agent-cli-cursor/src/: lib.rs
crates/seven-chat-agent-cli-protocol/: Cargo.toml
crates/seven-chat-agent-cli-protocol/src/: driver.rs  error.rs
crates/seven-chat-agent-cli-relay/: Cargo.toml
crates/seven-chat-agent-cli-relay-protocol/: Cargo.toml
crates/seven-chat-agent-cli-relay-protocol/src/: lib.rs
crates/seven-chat-agent-cli-relay/src/: auth.rs  executor.rs  main.rs  output.rs  workspace.rs
crates/seven-chat-agent-cli-worker-bee/: Cargo.toml
crates/seven-chat-agent-cli-worker-bee/src/: lib.rs
crates/seven-chat-agent-cli/src/: lib.rs  registry.rs  resolve.rs
crates/seven-chat-agent-core/: Cargo.toml
crates/seven-chat-agent-core/src/: agent_dna.rs  assistant_accumulation.rs  assistant_task_planner.rs  attachment.rs  auth.rs  cli_auth.rs  cli_relay.rs  cli_tool.rs  cli_transcript.rs  cli_workspace.rs  config.rs  dispatcher.rs  domain.rs  env.rs  error.rs  friend_cli.rs  group_validate.rs  lib.rs  llm_json.rs  memory_embedding.rs  memory_ingest.rs  memory_maintenance.rs  memory_record_policy.rs  memory_tier.rs  message_context.rs  scheduler.rs  tenant_context.rs
crates/seven-chat-agent-core/src/agent/: api.rs  mod.rs  pty.rs  registry.rs
crates/seven-chat-agent-core/src/dispatcher/: assistant_autonomy.rs  assistant_delegate.rs  delegate_continue.rs  im_writeback.rs  task_flow.rs  turn_intent.rs
crates/seven-chat-agent-core/src/evolution/: analyze.rs  cli_build.rs  config.rs  git_sync.rs  github.rs  issue_sync.rs  layout.rs  llm_analyze.rs  mod.rs  optimization.rs  registry.rs  run_log.rs  service.rs  store.rs
crates/seven-chat-agent-core/src/judge/: bridge.rs  mod.rs  service.rs
crates/seven-chat-agent-core/src/profile/: capability.rs  derive.rs  extensions.rs  group_memory.rs  infer.rs  member_group_note.rs  mod.rs  registry.rs  scheduling.rs  types.rs
crates/seven-chat-agent-core/src/provider/: anthropic.rs  chat_content.rs  embeddings.rs  gemini.rs  mod.rs  openai_compat.rs  registry.rs  types.rs
crates/seven-chat-agent-core/src/runtime/: agent.rs  brain.rs  config.rs  engine.rs  memory.rs  provider_env.rs
crates/seven-chat-agent-core/src/store/: admin.rs  agent_dna.rs  assistant_global.rs  assistant_policy.rs  assistant_queue.rs  assistant_todo.rs  cli_session.rs  conversation.rs  friend.rs  group.rs  group_workspace.rs  human.rs  memory.rs  message.rs  mod.rs  profile_framework.rs  provider.rs  skill.rs  tenant_invite.rs  user.rs  vault.rs  workspace.rs
crates/seven-chat-agent-core/tests/: dispatcher_e2e_integration.rs  dispatcher_orchestration_integration.rs  profile_store_integration.rs
crates/seven-chat-agent-server/: Cargo.toml
crates/seven-chat-agent-server/src/: auth.rs  cli_relay_ws.rs  lib.rs  main.rs  public_urls.rs  state.rs  static_assets.rs  ws_api.rs
crates/seven-chat-agent-server/src/routes/: attachments.rs  auth.rs  errors.rs  evolution.rs  mod.rs  tenant.rs
crates/worker-bee-cli/: Cargo.toml  README.md
crates/worker-bee-cli/src/: cli.rs  cli_blocks.rs  cli_stderr.rs  codex_jsonl.rs  cursor_stream_json.rs  exec.rs  jsonl.rs  lib.rs  main.rs  mcp.rs  memory.rs  skill.rs
(+401 files in other folders)
