[workspace]
resolver = "2"
members = [
    "crates/seven-chat-agent-cli-relay-protocol",
    "crates/seven-chat-agent-cli-relay",
    "crates/seven-chat-agent-cli-protocol",
    "crates/seven-chat-agent-cli-codex",
    "crates/seven-chat-agent-cli-claude",
    "crates/seven-chat-agent-cli-cursor",
    "crates/seven-chat-agent-cli-worker-bee",
    "crates/seven-chat-agent-cli",
    "crates/seven-chat-agent-judge",
    "crates/seven-chat-agent-core",
    "crates/seven-chat-agent-server",
    "crates/seven-chat-agent-tui",
    "crates/worker-bee-cli",
]
exclude = [
    "apps/seven-chat-agent-desktop/src-tauri",
    "data/cli-workspaces",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/sanyexieai/seven_chat_agent"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
    "json",
    "chrono",
    "uuid",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
eventsource-stream = "0.2"
bytes = "1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
regex = "1"
lru = "0.12"
strip-ansi-escapes = "0.2"
portable-pty = "0.9"
keyring = { version = "3", default-features = false }
rand = "0.8"
ratatui = "0.28"
crossterm = "0.28"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
seven-chat-agent-cli = { path = "crates/seven-chat-agent-cli" }
seven-chat-agent-cli-protocol = { path = "crates/seven-chat-agent-cli-protocol" }
seven-chat-agent-cli-codex = { path = "crates/seven-chat-agent-cli-codex" }
seven-chat-agent-cli-claude = { path = "crates/seven-chat-agent-cli-claude" }
seven-chat-agent-cli-cursor = { path = "crates/seven-chat-agent-cli-cursor" }
seven-chat-agent-cli-worker-bee = { path = "crates/seven-chat-agent-cli-worker-bee" }
seven-chat-agent-judge = { path = "crates/seven-chat-agent-judge" }
seven-chat-agent-cli-relay-protocol = { path = "crates/seven-chat-agent-cli-relay-protocol" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
