[package]
name = "honeycomb-cli-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Codex CLI driver implementation for Honeycomb"

[dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["process"] }
honeycomb-cli-protocol = { path = "../honeycomb-cli-protocol" }
worker-bee-cli = { path = "../worker-bee-cli" }
