[package]
name = "honeycomb-cli-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "honeycomb-cli-relay"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

honeycomb-cli = { workspace = true }
honeycomb-cli-protocol = { workspace = true }
honeycomb-cli-relay-protocol = { path = "../honeycomb-cli-relay-protocol" }
