[package]
name = "honeycomb-cli-worker-bee"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Worker Bee CLI driver implementation for Honeycomb"

[dependencies]
async-trait.workspace = true
honeycomb-cli-protocol = { path = "../honeycomb-cli-protocol" }
honeycomb-cli-codex = { path = "../honeycomb-cli-codex" }
worker-bee-cli = { path = "../worker-bee-cli" }
