[package]
name = "honeycomb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified CLI driver interface for Codex, Cursor, Claude, and Worker Bee"

[dependencies]
tokio = { workspace = true, features = ["process", "rt-multi-thread", "macros"] }
honeycomb-cli-protocol = { path = "../honeycomb-cli-protocol" }
honeycomb-cli-codex = { path = "../honeycomb-cli-codex" }
honeycomb-cli-claude = { path = "../honeycomb-cli-claude" }
honeycomb-cli-cursor = { path = "../honeycomb-cli-cursor" }
honeycomb-cli-worker-bee = { path = "../honeycomb-cli-worker-bee" }
worker-bee-cli = { path = "../worker-bee-cli" }
