[package]
name = "honeycomb-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "honeycomb_server"
path = "src/lib.rs"

[[bin]]
name = "honeycomb-server"
path = "src/main.rs"

[dependencies]
honeycomb-core = { path = "../honeycomb-core" }
honeycomb-cli-relay-protocol = { path = "../honeycomb-cli-relay-protocol" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
mime_guess = { version = "2", optional = true }
include_dir = { version = "0.7", optional = true }

[features]
default = []
# 把 web/dist 通过 include_dir!() 编译进二进制；桌面壳必开。
embed-frontend = ["dep:include_dir", "dep:mime_guess"]
