[package]
name = "honeycomb-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "honeycomb-tui"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
clap.workspace = true
chrono.workspace = true
