[package]
name = "seven-chat-agent-cli-cursor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cursor Agent CLI driver implementation for SevenChatAgent"

[dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["process"] }
seven-chat-agent-cli-protocol = { path = "../seven-chat-agent-cli-protocol" }
