[package]
name = "seven-chat-agent-cli-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Abstract interfaces and shared types for SevenChatAgent CLI drivers"

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
