[package]
name = "seven-chat-agent-cli-relay-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
seven-chat-agent-cli-protocol = { path = "../seven-chat-agent-cli-protocol" }
