[package]
name = "seven-chat-agent-cli-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "seven-chat-agent-cli-relay"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "ring", "std", "tls12"] }

seven-chat-agent-cli = { workspace = true }
seven-chat-agent-cli-protocol = { workspace = true }
seven-chat-agent-cli-relay-protocol = { path = "../seven-chat-agent-cli-relay-protocol" }
worker-bee-cli = { path = "../worker-bee-cli" }
