[package]
name = "worker-bee-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Worker Bee CLI — honeycomb worker-bee agent (memory, MCP, skills)"
readme = "README.md"

[[bin]]
name = "worker-bee"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "process"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
