[package]
name = "honeycomb-desktop"
version = "0.1.0"
edition = "2021"
description = "honeycomb desktop shell (Tauri 2)"
authors = ["honeycomb contributors"]

[lib]
name = "honeycomb_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
honeycomb-core = { path = "../../../crates/honeycomb-core" }
honeycomb-server = { path = "../../../crates/honeycomb-server", features = [
    "embed-frontend",
] }
anyhow = "1"
dirs = "5"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
